err/moltemplate.err
Listing '.'...
Listing './bin'...
Compiling './bin/bonds_by_type.py'...
Compiling './bin/chargepairs_by_type.py'...
Compiling './bin/dump2data.py'...
Compiling './bin/ettree.py'...
Compiling './bin/extract_espresso_atom_types.py'...
Compiling './bin/extract_lammps_data.py'...
Compiling './bin/genpoly.py'...
Compiling './bin/ltemplify.py'...
Compiling './bin/lttree.py'...
Compiling './bin/lttree_check.py'...
Compiling './bin/lttree_postprocess.py'...
Compiling './bin/nbody_by_type.py'...
Compiling './bin/nbody_fix_ttree_assignments.py'...
Compiling './bin/nbody_reorder_atoms.py'...
Compiling './bin/pdbsort.py'...
Compiling './bin/postprocess_coeffs.py'...
Compiling './bin/postprocess_input_script.py'...
Compiling './bin/raw2data.py'...
Compiling './bin/remove_duplicate_atoms.py'...
Compiling './bin/remove_duplicates_nbody.py'...
Compiling './bin/renumber_DATA_first_column.py'...
Compiling './bin/ttree.py'...
Compiling './bin/ttree_render.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/moltemplate'...
Compiling './lib/python3.5/site-packages/moltemplate/ettree.py'...
***   File "./lib/python3.5/site-packages/moltemplate/ettree.py", line 485
    def main()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/moltemplate/nbody_alt_symmetry'...
Listing './lib/python3.5/site-packages/moltemplate/scripts'...
Listing './lib/python3.5/site-packages/moltemplate-2.6.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
